--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 Linux_coredump is a volatility plugin that attempts to create a core dump file starting from the memory of a Linux process.
 
 Usage:
-        1. Extract the linux_coredump folder and put it in a directory (for instance ~/Downloads).
+        1. Clone or download the linux_coredump plugin.
         2. Issue the command:
                volatility --plugins=<path of extracted linux_coredump dir> --profile=<memory profile> -f <memory dump> linux_coredump --pid <process pid> --dump-dir <output dir> --output-file <output file>
            or
